<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="example_email">example@gmail.com</string>
    <string name="enter">Вход</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="register">Регистрация</string>
    <string name="no_account_question">Нет аккаунта?</string>
    <string name="forgot_password">Забыл пароль</string>
</resources>